# sqlx-turso

./: Cargo.toml  README.md
.github/workflows/: ci.yml
.sqlx/: query-2341686090bb16bc6842e0d821a502003cc14bfd54b09f2e2e832249c6b9765e.json  query-6c99fa626278c7bad0eefd5fd1e5ba190a2e893224634474d5559afe7682ba62.json  query-ab7bef0bd0a4559f9b78553d6793766d7122d5b6257c9254c47c3c7bcfecc2fb.json  query-e0b12174b41649fe543989ac80cb64f25d41fa5ae4fe7be6992b5d3c0e8aae58.json
crates/sqlx-turso/: Cargo.toml
crates/sqlx-turso-cli/: Cargo.toml
crates/sqlx-turso-cli/src/: main.rs
crates/sqlx-turso-core/: Cargo.toml
crates/sqlx-turso-core/src/: any.rs  arguments.rs  column.rs  connection.rs  database.rs  driver.rs  error.rs  executor.rs  features.rs  lib.rs  lifecycle.rs  macros.rs  migrate.rs  options.rs  pool.rs  query_result.rs  row.rs  statement.rs  transaction.rs  type_info.rs  value.rs
crates/sqlx-turso-macros/: Cargo.toml
crates/sqlx-turso-macros/src/: lib.rs
crates/sqlx-turso/examples/: checked_queries.rs  connect.rs  encryption_mvcc.rs  migrations.rs  pool.rs  sync.rs  transactions.rs
crates/sqlx-turso/src/: lib.rs
crates/sqlx-turso/tests/: macro_user.sql  macros.rs  online_macros.rs  ui.rs
crates/sqlx-turso/tests/ui/fail/: scalar_requires_one_column.rs  scalar_requires_one_column.stderr
crates/sqlx-turso/tests/ui/pass/: basic_query.rs  weak_bind_arity.rs
