[package]
name = "sqlx-turso-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Metadata preparation helper for sqlx-turso checked query macros"
readme = "../../README.md"
keywords = ["sqlx", "turso", "cli"]
categories = ["database", "command-line-utilities"]

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }

[[bin]]
name = "sqlx-turso"
path = "src/main.rs"
