[package]
name = "sqlx-turso-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Metadata preparation helper for sqlx-turso checked query macros"
documentation = "https://docs.rs/sqlx-turso-cli"
readme = "../../README.md"
keywords = ["sqlx", "turso", "cli"]
categories = ["database", "command-line-utilities"]

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }

[[bin]]
name = "sqlx-turso"
path = "src/main.rs"
doc = false
