[package]
name = "sqlx-turso-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core SQLx adapter types for the Rust Turso database engine"
documentation = "https://docs.rs/sqlx-turso-core"
readme = "../../README.md"
keywords = ["sqlx", "turso", "sqlite", "database"]
categories = ["database"]

[features]
default = ["runtime-tokio"]
runtime-tokio = ["sqlx-core/_rt-tokio"]
any = ["sqlx-core/any"]
sync = ["turso/sync"]
fts = ["turso/fts"]
migrate = ["sqlx-core/migrate"]
offline = ["dep:serde", "dep:serde_json", "sqlx-core/offline"]
macros = ["offline", "dep:sqlx-macros-core", "sqlx-macros-core/macros", "sqlx-macros-core/_rt-tokio", "sqlx-macros-core/sqlx-toml"]
chrono = ["dep:chrono", "sqlx-core/chrono"]
json = ["dep:serde", "dep:serde_json", "sqlx-core/json"]
time = ["dep:time", "sqlx-core/time"]
uuid = ["dep:uuid", "sqlx-core/uuid"]

[dependencies]
chrono = { workspace = true, optional = true }
either.workspace = true
futures-core.workspace = true
futures-util.workspace = true
log.workspace = true
percent-encoding.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sqlx-core = { workspace = true, features = ["offline"] }
sqlx-macros-core = { workspace = true, optional = true }
time = { workspace = true, optional = true }
tokio.workspace = true
turso.workspace = true
url.workspace = true
uuid = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
