[package]
name = "sqlx-turso"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "SQLx adapter for the Rust Turso database engine"
documentation = "https://docs.rs/sqlx-turso"
readme = "../../README.md"
keywords = ["sqlx", "turso", "sqlite", "database"]
categories = ["database"]

[features]
default = ["runtime-tokio"]
runtime-tokio = ["sqlx-turso-core/runtime-tokio"]
macros = ["dep:sqlx-turso-macros", "sqlx-turso-core/macros"]
any = ["sqlx-turso-core/any"]
sync = ["sqlx-turso-core/sync"]
fts = ["sqlx-turso-core/fts"]
migrate = ["sqlx-turso-core/migrate"]
offline = ["sqlx-turso-core/offline"]
chrono = ["sqlx-turso-core/chrono", "sqlx-turso-macros?/chrono"]
json = ["sqlx-turso-core/json"]
time = ["sqlx-turso-core/time", "sqlx-turso-macros?/time"]
uuid = ["sqlx-turso-core/uuid", "sqlx-turso-macros?/uuid"]

[dependencies]
sqlx.workspace = true
sqlx-turso-core.workspace = true
sqlx-turso-macros = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
trybuild.workspace = true

[[example]]
name = "checked_queries"
required-features = ["macros"]

[[example]]
name = "migrations"
required-features = ["migrate"]

[[example]]
name = "sync"
required-features = ["sync"]

[[test]]
name = "macros"
required-features = ["macros"]

[[test]]
name = "online_macros"
required-features = ["macros"]

[[test]]
name = "ui"
required-features = ["macros"]
